re PR tree-optimization/30558 (ICE with OpenMP and exceptions)

PR tree-optimization/30558
	* tree-eh.c (lower_eh_filter): If EH_FILTER_MUST_NOT_THROW
	clear this_state.prev_try.

	* g++.dg/gomp/pr30558.C: New test.

From-SVN: r124179